Update Paython - Regresión Lineal.ipynb

--- a/Paython - Regresión Lineal.ipynb
+++ b/Paython - Regresión Lineal.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "#----------------------------------------Regresión con una variable (con funciones de librería numpy)\n",
+    "#-----------------------------------Regresión con una variable (con funciones de librería numpy)\n",
     "# El dataset viene con varios atributos, pero en el desarollo se selecciona solo una de ellos.\n",
     "\n",
     "# 1.- Cargo los datos\n",
@@ -111,12 +111,12 @@
    ],
    "source": [
     "#---------------------------Para inspecionar el dataset\n",
-    "# Código para imprimiar en forma de filas y columnas el data del dataset\n",
+    "# Código para imprimir en forma de filas y columnas el data del dataset\n",
     "#for i in range(442):\n",
     "#    for j in range(10):\n",
     "#        print(diabetes.data[i,j], end=\";\")\n",
     "#    print ()    \n",
-    "# Código para imprimiar en forma de filas el target del dataset\n",
+    "# Código para imprimir en forma de filas el target del dataset\n",
     "#for i in range(442):\n",
     "#    print(diabetes.target[i])\n",
     "# diabetes.data[:,6] devuelve la columna completa para la variable X7\n",
