Update Paython - Regresión Lineal.ipynb

--- a/Paython - Regresión Lineal.ipynb
+++ b/Paython - Regresión Lineal.ipynb
@@ -1186,7 +1186,7 @@
    "outputs": [],
    "source": [
     "# Como el objeto LinearRegression necesita los datos en la forma (X,Y)\n",
-    "# donde X son las variables independientes (atributos) e Y las variables dependientes(), ajustamos nuestros dataframes como\n",
+    "# donde X son las variables independientes (atributos) e Y las variables dependientes(etiquetas), ajustamos nuestros dataframes como\n",
     "# sigue:\n",
     "\n",
     "X_variables = diabetes_df.drop('Target',1) # puesto que solo necesitamos las X, obviamos la columna Target\n",
